@@ -7,6 +7,7 @@
     * FIX: Detecting duplicate tag ids between regular tags and auxtags
     * FIX: Fixed layout problem of "new special rule" button in rule editor
     * FIX: Fixed layout problem on "activate changes" page
+    * FIX: Added check if contacts belong to contactgroup before contactgroup deletion
 
     Multisite:
     * FIX: remove refresh button from dashboard.
